# Rubiks-Cube-Solver

./: BFSsolver.h  CMakeLists.txt  DFSsolver.h  IDAstar.h  IDDFSsolver.h  README.md  RubikCube.cpp  RubikCube.h  RubikCube1DRep.cpp  RubikCube3DRep.cpp  RubikCubeBitBoardRep.cpp  main.cpp
Pattern_dbs/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDB.cpp  CornerPatternDB.h  NibbleArray.cpp  NibbleArray.h  PermutationIndexer.h  math.cpp  math.h  patternDB.cpp  patternDB.h
